--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <button type="button" class="button btn control waves-effect amber darken-4"
                         data-filter=".book">Books (4)</button>
                     <button type="button" class="button btn control waves-effect green darken-4"
-                        data-filter=".article">Articles (15)</button>
+                        data-filter=".article">Articles (16)</button>
                     <button type="button" class="button btn control waves-effect deep-orange darken-4"
                         data-filter=".review">Reviews (9)</button>
                     <button type="button" class="button btn control waves-effect blue darken-4"
@@ -142,16 +142,16 @@
                     <div class="card-stacked">
 
                         <div class="card-content">
-                            <span class="new badge amber darken-4" data-badge-caption="">Article from 2023</span>
+                            <span class="new badge green darken-4" data-badge-caption="">Article from 2023</span>
                             <h4 class="header">Reconsidering Arabic Roots for the <i>Tertia Via</i></h4>
                             <h5></h5>
 
                             <p>This paper reopens the debate on the possibility that Aquinas borrowed his tertia via from a Latin translation of Maimonides ‘Guide for the Perplexed’. After introducing the text of the tertia via, I shall analyze the first part and conclude that while a ‘metaphysical’, tenseless reading is correct, we should not be nervous to call Aquinas’s reasoning for what it is: flawed. Framing the problematic passage in its historical context, I shall then argue that the flaw lies not so much with Aquinas, but with the source he was borrowing from. This is Maimonides’ <i>Dalālat al-ḥāʾirīn</i> (“The Guide for the Perplexed”), and in fact more specifically the blame is to be given to an early translator into Latin.</p>
-                            <blockquote class="blockBook">European Journal for the Study of Thomas Aquinas 41:1, pp. 1-20.
+                            <blockquote class="blockBook"><i>European Journal for the Study of Thomas Aquinas</i> vol. 41, no. 1, pp. 1-20.
                             </blockquote>
                         </div>
                         <div class="card-action">
-                            <a class="amber-text text-darken-4" href="https://sciendo.com/article/10.2478/ejsta-2023-0001">Download PDF here</a>
+                            <a class="green-text text-darken-4" href="https://sciendo.com/article/10.2478/ejsta-2023-0001">Download PDF here</a>
 
                         </div>
                     </div>
